--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript</h1>
-    <script>"app.js"</script>
+    <h1>Javascript</h1>
+    <script src="Assignment 3.js"
 </body>
 </html>
