--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    table , th, td {
+        border: 2px solid black;
+        border-collapse: collapse;
+        padding: 10px;
+    }
+</style>
 <body>
-    <h1>Javascript</h1>
-    <script src="Assignment 2.js"
+    <table>
+    <thead>
+        <tr>
+        <th>S1.no</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Company</th>
+    </tr>
+    </thead>
+    <tbody id = "store">
+    </tbody>
+    </table>
+    <h1></h1>
+    <!--<script src="app.js"></script>-->
+    <!--<script src="factorial.js"></script>-->
+    <!--<script src="WhileLoop.js"></script>-->
+    <!--<script src = "DoWhile.js"></script>-->
+    <!--<script src = "functions.js"></script>-->
+    <script src = "async.js"></script>
 </body>
 </html>
